initialize main files

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,22 @@
-@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap");
 *, ::before, ::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Space Mono', monospace;
+  font-family: "Roboto", sans-serif;
   cursor: default;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Shrikhand", serif;
+}
+
+:root {
+  --main-color: #9356DC;
+  --secondary-color: #FF79DA;
+  --tertiary-color: #99E2D0;
+  --main-bg-color: #f6f6f6;
+  --filter-bg-color: #DEEBFF;
+}
+
 /*# sourceMappingURL=style.css.map */
