--- a/css/style.css
+++ b/css/style.css
@@ -19,4 +19,17 @@ h1, h2, h3, h4, h5, h6 {
   --filter-bg-color: #DEEBFF;
 }
 
+.header-container {
+  width: 100%;
+  height: 63px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15);
+}
+.header-container img {
+  height: 36px;
+  width: auto;
+}
+
 /*# sourceMappingURL=style.css.map */
