--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap");
-*, ::before, ::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: "Roboto", sans-serif;
-  cursor: default;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Shrikhand", serif;
-}
-
-:root {
-  --main-color: #9356DC;
-  --secondary-color: #FF79DA;
-  --tertiary-color: #99E2D0;
-  --main-bg-color: #f6f6f6;
-  --filter-bg-color: #DEEBFF;
-}
-
-.header-container {
-  width: 100%;
-  height: 63px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15);
-}
-.header-container img {
-  height: 36px;
-  width: auto;
-}
-
-/*# sourceMappingURL=style.css.map */
+@import"https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap";:root{color:#353535;font-family:"Roboto",sans-serif;font-size:16px}*,::before,::after{box-sizing:border-box;margin:0;padding:0;cursor:default}.button-rounded{box-shadow:0 4px 10px 0 rgba(0,0,0,.4);border:none;outline:none;background:linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);color:#fff;border-radius:25px;padding:0 16px;height:50px;line-height:46px;font-family:"Roboto",sans-serif;font-size:16px;font-weight:500;cursor:pointer;transition:background .2s;width:fit-content}.button-rounded:hover{background:linear-gradient(200.64deg, #9356DC -5.2%, #9356DC 110.74%),linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15))}.flex{display:flex;flex-direction:row;flex-wrap:wrap}.flex.-gap17{gap:17px}.flex.-gap40{gap:40px}.flex.-column{flex-direction:column}.flex.-row{flex-direction:row}.flex.-nowrap{flex-wrap:nowrap}.flex.-top{align-items:flex-start}.flex.-middle{align-items:center}.flex.-bottom{align-items:flex-end}.flex.-baseline{align-items:baseline}.flex.-center{justify-content:center}.flex.-left{justify-content:flex-start}.flex.-right{justify-content:flex-end}.header-container{box-shadow:0 2px 4px 0 rgba(0,0,0,.15);width:100%;height:63px;display:flex;align-items:center;justify-content:center}.header-container img{height:36px;width:auto}.section-title{color:#000;font-family:"Roboto",sans-serif;font-weight:700;font-size:40px}.section-sub-title{color:#000;font-family:"Roboto",sans-serif;font-weight:700;font-size:24px}.location-field{font-size:16px;font-weight:500;height:50px;background-color:#eaeaea}.location-field.-ts13{font-size:13px}.location-field.-ts14{font-size:14px}.location-field.-ts18{font-size:18px}.location-field.-ts24{font-size:24px}.location-field.-ts30{font-size:30px}.location-field.-ts48{font-size:48px}.section-container{background-color:#f6f6f6}.section-container.-light{background-color:#fff}.section-content{width:100%;max-width:1440px;margin:auto}/*# sourceMappingURL=style.css.map */
