improve main page

--- a/scss/_root.scss
+++ b/scss/_root.scss
@@ -1,4 +1,4 @@
-$root-color-text: $global-text-color-shade-10 !default;
+$root-color-text: $global-text-color-shade-0 !default;
 $root-font-family: $global-sans-primary-font-family !default;
 $root-font-size: $global-font-size !default;
 
@@ -6,11 +6,11 @@ $root-font-size: $global-font-size !default;
   color: $root-color-text;
   font-family: $root-font-family;
   font-size: $root-font-size;
+  font-weight: 500;
 }
 
 *,::before,::after{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  cursor: default;
 }
