--- a/scss/component/_component.scss
+++ b/scss/component/_component.scss
@@ -1,7 +1,10 @@
 @import "button/button";
 @import "text/text";
 @import "flex/flex";
+@import "grid/grid";
 @import "header/header";
+@import "icon/icon";
 @import "title/title";
 @import "location-field/location-field";
+@import "card/card";
 @import "container/container";
