--- a/scss/component/text/_text.scss
+++ b/scss/component/text/_text.scss
@@ -17,5 +17,21 @@
 @mixin q-text {
   @include q-text-sizes;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 300;
+
+  &.-dark-light {
+    color: $global-text-color-shade-10;
+  }
+
+  &.-bold {
+    font-weight: 500;
+  }
+
+  &.-card-title {
+    font-size: 17px;
+  }
+}
+
+.text {
+  @include q-text;
 }
