--- a/scss/common/_font.scss
+++ b/scss/common/_font.scss
@@ -1,3 +1,8 @@
 $global-sans-primary-font-family: 'Roboto', sans-serif !default;
 $global-sans-secondary-font-family: 'Shrikhand', serif !default;
 $global-font-size: 16px !default;
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
