--- a/scss/quark/gap/_gap.scss
+++ b/scss/quark/gap/_gap.scss
@@ -1,16 +1,17 @@
-@mixin q-gap-size($size) {
-  $pixel-size: $size * 1px;
-
-  &.-gap#{$size} {
-    gap: $pixel-size;
-  }
-}
-
 @mixin q-gap-sizes {
-  $gap-sizes: 17, 40;
+  $gap-sizes: 5, 17, 20, 30, 40;
 
   @each $gap-size in $gap-sizes {
-    @include q-gap-size($gap-size);
+
+    &.-gap#{$gap-size} {
+      gap: $gap-size * 1px;
+    }
+
+    @each $gap-height in $gap-sizes {
+      &.-gap#{$gap-size}-#{$gap-height} {
+        gap: $gap-size * 1px $gap-height * 1px;
+      }
+    }
   }
 }
 
