--- a/scss/common/_color.scss
+++ b/scss/common/_color.scss
@@ -17,3 +17,4 @@ $global-fill-color-light-shadow: rgba(#000000, 0.15) !default;
 $global-fill-color-shade-100:#fff !default;
 $global-fill-color-shade-70: $global-color-grey !default;
 $global-fill-color-shade-50: #7e7e7e !default;
+$global-fill-color-shade-10: #353535;
