--- a/scss/component/_component.scss
+++ b/scss/component/_component.scss
@@ -1,5 +1,6 @@
 @import "button/button";
 @import "text/text";
+@import "footer/footer";
 @import "flex/flex";
 @import "grid/grid";
 @import "header/header";
