add loading effect

--- a/scss/component/_component.scss
+++ b/scss/component/_component.scss
@@ -5,6 +5,7 @@
 @import "grid/grid";
 @import "header/header";
 @import "icon/icon";
+@import "loader/loader";
 @import "title/title";
 @import "location-field/location-field";
 @import "card/card";
