--- a/scss/component/loader/_loader.scss
+++ b/scss/component/loader/_loader.scss
@@ -1,3 +1,5 @@
+$icon-size: clamp(24px, 4vw, 50px) !default;
+
 .loader {
   position: fixed;
   z-index: 1;
@@ -6,28 +8,25 @@
   overflow: hidden;
   background-color: rgb(119, 119, 119, 0.5);
   animation: fade 2.5s forwards linear;
-}
+  &::before, &::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    width: $icon-size;
+    height: $icon-size;
+  }
 
-.loader::before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  right: -50px;
-  width: 50px;
-  height: 50px;
-  background-image: url('../images/icon/cut.svg');
-  animation: moveFromRight 2.5s forwards ease-out;
-}
+  &::before {
+    right: -50px;
+    background-image: url('../images/icon/cut.svg');
+    animation: moveFromRight 2.5s forwards ease-out;
+  }
 
-.loader::after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: -50px;
-  width: 50px;
-  height: 50px;
-  background-image: url('../images/icon/fork.svg');
-  animation: moveFromLeft 2.5s forwards ease-out;
+  &::after {
+    left: -50px;
+    background-image: url('../images/icon/fork.svg');
+    animation: moveFromLeft 2.5s forwards ease-out;
+  }
 }
 
 @keyframes fade {
@@ -48,26 +47,30 @@
     right: -50px;
   }
   40% {
-    right: calc(50% - 25px);
+    right: calc(50% - ($icon-size / 2));
   }
   60% {
     transform: rotateZ(0deg);
   }
   80% {
     transform: rotateZ(360deg);
-    right: calc(50% - 25px);
+    right: calc(50% - ($icon-size / 2));
     scale: 1;
     opacity: 1;
   }
   90% {
     transform: rotateZ(360deg);
-    right: calc(50% - 25px);
+    right: calc(50% - ($icon-size / 2));
   }
-  100% {
+  99% {
     transform: rotateZ(360deg);
-    right: calc(50% - 25px);
+    right: calc(50% - ($icon-size / 2));
     scale: 1.5;
     opacity: 0;
+  }
+  100% {
+    opacity: 0;
+    display: none;
   }
 }
 
@@ -76,25 +79,29 @@
     left: -50px;
   }
   40% {
-    left: calc(50% - 25px);
+    left: calc(50% - ($icon-size / 2));
   }
   60% {
     transform: rotateZ(0deg);
   }
   80% {
     transform: rotateZ(360deg);
-    left: calc(50% - 25px);
+    left: calc(50% - ($icon-size / 2));
     scale: 1;
     opacity: 1;
   }
   90% {
     transform: rotateZ(360deg);
-    left: calc(50% - 25px);
+    left: calc(50% - ($icon-size / 2));
   }
-  100% {
+  99% {
     transform: rotateZ(360deg);
-    left: calc(50% - 25px);
+    left: calc(50% - ($icon-size / 2));
     scale: 1.5;
     opacity: 0;
+  }
+  100% {
+    opacity: 0;
+    display: none;
   }
 }
