--- a/scss/component/text/_text.scss
+++ b/scss/component/text/_text.scss
@@ -35,3 +35,11 @@
 .text {
   @include q-text;
 }
+
+@media (max-width: 768px) {
+  .text {
+    &.-mobile-centered {
+      text-align: center;
+    }
+  }
+}
