--- a/scss/component/title/section-title/_section-title.scss
+++ b/scss/component/title/section-title/_section-title.scss
@@ -2,5 +2,6 @@
   color: $global-text-color-shade-0;
   font-family: $global-sans-primary-font-family;
   font-weight: 700;
-  font-size: 40px;
+  font-size: clamp(24px, 4vw, 40px);
+  text-align: center;
 }
