--- a/scss/quark/gap/_gap.scss
+++ b/scss/quark/gap/_gap.scss
@@ -15,6 +15,27 @@
   }
 }
 
+@mixin q-mobile-gap-sizes {
+  $gap-sizes: 5, 10, 17, 20, 30, 40;
+
+  @each $gap-size in $gap-sizes {
+
+    &.-mobile-gap#{$gap-size} {
+      gap: $gap-size * 1px;
+    }
+
+    @each $gap-height in $gap-sizes {
+      &.-mobile-gap#{$gap-size}-#{$gap-height} {
+        gap: $gap-size * 1px $gap-height * 1px;
+      }
+    }
+  }
+}
+
 @mixin q-gap {
   @include q-gap-sizes;
+}
+
+@mixin q-mobile-gap {
+  @include q-mobile-gap-sizes;
 }
