--- a/scss/component/header/header.scss
+++ b/scss/component/header/header.scss
@@ -1,4 +1,3 @@
-
 .header-container {
   @include q-light-shadow;
   width: 100%;
@@ -10,5 +9,15 @@
   img {
     height: 36px;
     width: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .header-container {
+    height: 63px;
+    img {
+      height: auto;
+      width: 162px;
+    }
   }
 }
