add restaurant page content

--- a/scss/component/_component.scss
+++ b/scss/component/_component.scss
@@ -9,4 +9,5 @@
 @import "title/title";
 @import "location-field/location-field";
 @import "card/card";
+@import "thumbnail-image/thumbnail-image";
 @import "container/container";
