--- a/scss/component/header/header.scss
+++ b/scss/component/header/header.scss
@@ -1,4 +1,7 @@
+@import "back-icon/back-icon";
+
 .header-container {
+  position: relative;
   @include q-light-shadow;
   width: 100%;
   height: 96px;
