--- a/scss/component/card/card/_card.scss
+++ b/scss/component/card/card/_card.scss
@@ -6,7 +6,6 @@
 
   .card-image {
     position: relative;
-    display: flex;
 
     .image-flag {
       position: absolute;
@@ -22,7 +21,7 @@
 
     img {
       width: 100%;
-      height: auto;;
+      height: auto;
       max-height: 200px;
     }
   }
