--- a/scss/quark/shadow/_shadow.scss
+++ b/scss/quark/shadow/_shadow.scss
@@ -9,3 +9,7 @@
 @mixin q-card-shadow {
   box-shadow: 0 4px 15px 0 $global-fill-color-light-shadow;
 }
+
+@mixin q-card-light-shadow {
+  box-shadow: 0 4px 15px 0 $global-fill-color-light-shadow-10;
+}
