--- a/scss/common/_color.scss
+++ b/scss/common/_color.scss
@@ -10,9 +10,11 @@ $global-text-color-shade-100: #fff;
 $global-text-color-shade-10: #353535;
 $global-text-color-shade-0: #000;
 $global-text-color-green: #008766;
+$global-text-color-light-green: #99e2d0;
 
 $global-fill-color-shadow: rgba(#000000, 0.4) !default;
 $global-fill-color-light-shadow: rgba(#000000, 0.15) !default;
+$global-fill-color-light-shadow-10: rgba(#000000, 0.1) !default;
 
 $global-fill-color-shade-100:#fff !default;
 $global-fill-color-shade-70: $global-color-grey !default;
