--- a/scss/component/container/_container.scss
+++ b/scss/component/container/_container.scss
@@ -1,3 +1,4 @@
 @import "card-container/card-container";
 @import "section-container/section-container";
 @import "section-content/section-content";
+@import "section-menu/section-menu";
