--- a/scss/component/loader/_loader.scss
+++ b/scss/component/loader/_loader.scss
@@ -1,4 +1,4 @@
-$icon-size: clamp(24px, 4vw, 50px) !default;
+$loader-icon-size: clamp(24px, 4vw, 50px) !default;
 
 .loader {
   position: fixed;
@@ -14,8 +14,8 @@ $icon-size: clamp(24px, 4vw, 50px) !default;
     content: '';
     position: absolute;
     top: 50%;
-    width: $icon-size;
-    height: $icon-size;
+    width: $loader-icon-size;
+    height: $loader-icon-size;
   }
 
   &::before {
@@ -49,24 +49,24 @@ $icon-size: clamp(24px, 4vw, 50px) !default;
     right: -50px;
   }
   40% {
-    right: calc(50% - ($icon-size / 2));
+    right: calc(50% - ($loader-icon-size / 2));
   }
   60% {
     transform: rotateZ(0deg);
   }
   80% {
     transform: rotateZ(360deg);
-    right: calc(50% - ($icon-size / 2));
+    right: calc(50% - ($loader-icon-size / 2));
     scale: 1;
     opacity: 1;
   }
   90% {
     transform: rotateZ(360deg);
-    right: calc(50% - ($icon-size / 2));
+    right: calc(50% - ($loader-icon-size / 2));
   }
   100% {
     transform: rotateZ(360deg);
-    right: calc(50% - ($icon-size / 2));
+    right: calc(50% - ($loader-icon-size / 2));
     scale: 1.5;
     opacity: 0;
   }
@@ -77,24 +77,24 @@ $icon-size: clamp(24px, 4vw, 50px) !default;
     left: -50px;
   }
   40% {
-    left: calc(50% - ($icon-size / 2));
+    left: calc(50% - ($loader-icon-size / 2));
   }
   60% {
     transform: rotateZ(0deg);
   }
   80% {
     transform: rotateZ(360deg);
-    left: calc(50% - ($icon-size / 2));
+    left: calc(50% - ($loader-icon-size / 2));
     scale: 1;
     opacity: 1;
   }
   90% {
     transform: rotateZ(360deg);
-    left: calc(50% - ($icon-size / 2));
+    left: calc(50% - ($loader-icon-size / 2));
   }
   100% {
     transform: rotateZ(360deg);
-    left: calc(50% - ($icon-size / 2));
+    left: calc(50% - ($loader-icon-size / 2));
     scale: 1.5;
     opacity: 0;
   }
