--- a/scss/component/text/_text.scss
+++ b/scss/component/text/_text.scss
@@ -27,13 +27,34 @@
     font-weight: 500;
   }
 
+  &.-extra-bold {
+    font-weight: 700;
+  }
+
   &.-card-title {
     font-size: 17px;
+  }
+
+  &.-upper {
+    text-transform: uppercase;
   }
 }
 
 .text {
   @include q-text;
+
+  &.-under-line{
+    position: relative;
+    &::after  {
+      content: '';
+      position: absolute;
+      bottom: -6px;
+      left: 0;
+      width: 40px;
+      height: 3px;
+      background-color: $global-text-color-light-green;
+    }
+  }
 }
 
 @media (max-width: 768px) {
