--- a/scss/component/card/card-menu/card-menu-success/_card-menu-success.scss
+++ b/scss/component/card/card-menu/card-menu-success/_card-menu-success.scss
@@ -9,4 +9,8 @@
   align-items: center;
   justify-content: center;
   transition: width .4s linear;
+  i {
+    opacity: .2;
+    transition: transform .4s linear, opacity .4s linear;
+  }
 }
