add card animation

--- a/scss/component/_component.scss
+++ b/scss/component/_component.scss
@@ -11,3 +11,5 @@
 @import "card/card";
 @import "thumbnail-image/thumbnail-image";
 @import "container/container";
+@import "section-animation/section-animation";
+@import "section-steps/section-steps";
