--- a/scss/component/card/card-menu/card-menu-success/_card-menu-success.scss
+++ b/scss/component/card/card-menu/card-menu-success/_card-menu-success.scss
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  max-width: 59px;
   transition: width .4s linear;
   i {
     opacity: .2;
