--- a/scss/component/card/card-menu/_card-menu.scss
+++ b/scss/component/card/card-menu/_card-menu.scss
@@ -1,26 +1,14 @@
 @import "card-menu-success/card-menu-success";
 
-$cards-menu: 8;
-$animation-duration: 0.8s;
-$delay-increment: 0.4s;
-
-.section-content {
-  & .-card-menu {
-    animation: slide-in $animation-duration ease-in forwards;
-
-    @for $card from 1 through $cards-menu {
-      &:nth-child(#{$card}) {
-        animation-delay: $card * $delay-increment;
-      }
-    }
-  }
-}
-
 .-card-menu {
   @include q-card-light-shadow;
   opacity: 0;
+  cursor: pointer;
+  display: flex;
+  gap: 10px;
+  flex-wrap: nowrap;
 
-  &:hover .card-menu-success {
+  &:hover .card-menu-success, &:active .card-menu-success {
     width: 59px;
     i {
       opacity: 1;
@@ -42,23 +30,25 @@ $delay-increment: 0.4s;
   }
 
   .card-price {
-    margin: 0 15px 10px 0;
+    margin: 0 0 10px 0;
   }
 
   .section-content {
     display: block;
     text-overflow: ellipsis;
     overflow: hidden;
-    padding: 10px 0 10px 20px;
+    padding: 10px 0 10px 15px;
+    width: max-content;
+    margin: 0 auto 0 0;
   }
 }
 
-@keyframes slide-in {
-  0% {
-    transform: translateY(15px);
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
+
+@media (max-width: 380px) {
+  .-card-menu {
+    &:hover .card-menu-success, &:active .card-menu-success {
+      width: 24%;
+      max-width: 59px;
+    }
   }
 }
