--- a/scss/component/icon/heart-icon/_heart-icon.scss
+++ b/scss/component/icon/heart-icon/_heart-icon.scss
@@ -6,6 +6,8 @@
   width: 100%;
   height: 100%;
   cursor: pointer;
+  background-repeat: no-repeat;
+  transition: opacity .2s, scale .5s;
 }
 
 .heart-icon {
@@ -20,8 +22,6 @@
   &::before {
     @include icon-properties;
     background-image: url('../images/icon/heart.svg');
-    background-repeat: no-repeat;
-    transition: opacity .2s, scale .5s;
     opacity: 1;
     scale: 1;
   }
@@ -29,27 +29,17 @@
   &::after {
     @include icon-properties;
     background-image: url('../images/icon/heart-colored.svg');
-    background-repeat: no-repeat;
-    transition: opacity .2s, scale .5s;
     opacity: 0;
     scale: 0;
   }
 
-  &:hover::after{
+  &:hover::after, &:active::after {
     opacity: 1;
     scale: 1;
   }
 
-  &:hover::before{
+  &:hover::before, &:active::before{
     opacity: 0;
     scale: 0;
-  }
-
-  &:checked {
-    background-image: url('../images/icon/heart-colored.svg');
-  }
-
-  &:checked::before{
-    opacity: 0;
   }
 }
