--- a/scss/component/flex/_flex.scss
+++ b/scss/component/flex/_flex.scss
@@ -54,8 +54,8 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .flex {
-    @include q-mobile-gap;
+    @include q-desktop-gap;
   }
 }
