--- a/scss/component/container/card-container/_card-container.scss
+++ b/scss/component/container/card-container/_card-container.scss
@@ -4,10 +4,8 @@
   display: grid;
 }
 
-@media (max-width: 700px) {
+@media (min-width: 700px) {
   .card-container {
-    &.-c2 {
-      grid-template-columns: 1fr;
-    }
+    @include q-desktop-grid-template-column;
   }
 }
