--- a/scss/component/container/section-content/_section-content.scss
+++ b/scss/component/container/section-content/_section-content.scss
@@ -18,8 +18,8 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .section-content {
-    @include q-mobile-paddings;
+    @include q-desktop-paddings;
   }
 }
