--- a/scss/component/footer/_footer.scss
+++ b/scss/component/footer/_footer.scss
@@ -6,19 +6,23 @@
   .footer-content {
     display: flex;
     justify-content: flex-end;
-    gap: 3%;
-    padding: 55px 5% 35px;
+    flex-direction: column-reverse;
+    align-items: flex-start;
+    gap: 15px;
+    padding: 30px 5%;
   }
 
   .footer-links {
     display: flex;
-    align-items: flex-end;
-    gap: 50px;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 7px;
   }
 
   .footer-illustrated-link {
     display: flex;
-    gap: 15px;
+    flex-direction: column;
+    gap: 7px;
     a {
       display: flex;
       gap: 10px;
@@ -33,8 +37,10 @@
 
   .footer-link {
     display: flex;
-    gap: 15px;
     font-weight: 400;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 7px;
   }
 
   .footer-logo {
@@ -44,22 +50,30 @@
   }
 }
 
-@media (max-width: 800px) {
+@media (min-width: 800px) {
   .footer {
+    justify-content: flex-end;
+
     .footer-content {
-      flex-direction: column-reverse;
-      align-items: flex-start;
+      flex-direction: row;
+      gap: 3%;
+      padding: 55px 5% 35px;
+    }
+
+    .footer-links {
+      flex-direction: row;
+      align-items: flex-end;
+      gap: 50px;
+    }
+
+    .footer-link {
+      flex-direction: row;
       gap: 15px;
-      padding: 30px 5%;
     }
-    .footer-links, .footer-link {
-      align-items: flex-start;
-      flex-direction: column;
-      gap: 7px;
-    }
+
     .footer-illustrated-link {
-      flex-direction: column;
-      gap: 7px;
+      flex-direction: row;
+      gap: 15px;
     }
   }
 }
