--- a/scss/component/header/header.scss
+++ b/scss/component/header/header.scss
@@ -4,23 +4,23 @@
   position: relative;
   @include q-light-shadow;
   width: 100%;
-  height: 96px;
+  height: 63px;
   display: flex;
   align-items: center;
   justify-content: center;
 
   img {
-    height: 36px;
-    width: auto;
+    height: auto;
+    width: 162px;
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .header-container {
-    height: 63px;
+    height: 96px;
     img {
-      height: auto;
-      width: 162px;
+      height: 36px;
+      width: auto;
     }
   }
 }
