--- a/scss/quark/size/_size.scss
+++ b/scss/quark/size/_size.scss
@@ -16,37 +16,37 @@
   }
 }
 
-@mixin q-mobile-padding($spacing) {
+@mixin q-desktop-padding($spacing) {
   $spacing-width: $spacing * 1px;
 
-  &.-mobile-s#{$spacing} {
+  &.-desktop-s#{$spacing} {
     padding: $spacing-width;
   }
 
-  &.-mobile-v#{$spacing} {
+  &.-desktop-v#{$spacing} {
     padding-top: $spacing-width;
     padding-bottom: $spacing-width;
   }
 
-  &.-mobile-h#{$spacing} {
+  &.-desktop-h#{$spacing} {
     padding-right: $spacing-width;
     padding-left: $spacing-width;
   }
 }
 
 @mixin q-paddings {
-  $paddings: 10, 15, 30, 40, 50, 70, 100;
+  $paddings: 10, 15, 20, 30, 40, 50, 70, 100;
 
   @each $padding in $paddings {
     @include q-padding($padding);
   }
 }
 
-@mixin q-mobile-paddings {
-  $paddings: 10, 15, 20, 30, 40, 50, 70;
+@mixin q-desktop-paddings {
+  $paddings: 10, 15, 20, 30, 40, 50, 70, 100;
 
   @each $padding in $paddings {
-    @include q-mobile-padding($padding);
+    @include q-desktop-padding($padding);
   }
 }
 
